# japanese-llm-experiments

./: .gitignore  README.md  pyproject.toml
japanese-llm-experiments/: core.py
